Added interactive navigation bar

--- a/index.html
+++ b/index.html
@@ -11,17 +11,12 @@
     <div>
         <h1 class="title">Odin Recipes</h1>
     </div>
-    <div class="list">
-        <ul>
-            <div class="carnitas">
-                <li><a href="recipes/carnitas.html">Carnitas</a></li>
-            </div>
-            <div class="garlicparm">
-                <li><a href="recipes/garlicparm.html">Crockpot Buffalo Wild Wings Garlic Parmesan Chicken</a></li>
-            </div>
-            <div class="cowboycav">
-                <li><a href="recipes/cowboycav.html">Cowboy Caviar</a></li>
-            </div>
+    <h2>Top 3 Recipes:</h2>
+    <div>
+        <ul class="list">
+            <li><a href="recipes/carnitas.html"><button class="navbar">Carnitas</button></a></li>
+            <li><a href="recipes/garlicparm.html"><button class="navbar">Crockpot Buffalo Wild Wings Garlic Parmesan Chicken</button></a></li>
+            <li><a href="recipes/cowboycav.html"><button class="navbar">Cowboy Caviar</button></a></li>
         </ul>
     </div>
 </body>
