Basic CSS website structure created, added definition to the navbar in recipes.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <div>
         <h1 class="title">Odin Recipes</h1>
+    </div>
+    <div class="top-page">
+        <h2 class="welcome">Welcome to Odin Recipes</h2>
+        <p>Here in Odin Recipes we own the most delicious and mouth watering recipes specially curated in house.
+            We can assure your family will love the food they eat and you will love how easy they are to prepare.</p>
+            <p id="slogan"><em>Spend less hours cooking and more hours enjoying!</em></p>
+        
     </div>
     <h2>Top 3 Recipes:</h2>
     <div>
@@ -18,6 +25,12 @@
             <li><a href="recipes/garlicparm.html"><button class="navbar">Crockpot Buffalo Wild Wings Garlic Parmesan Chicken</button></a></li>
             <li><a href="recipes/cowboycav.html"><button class="navbar">Cowboy Caviar</button></a></li>
         </ul>
+
+        <div>
+            <p>
+
+            </p>
+        </div>
     </div>
 </body>
 </html>
