--- a/recipes/garlicparm.html
+++ b/recipes/garlicparm.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crockpot BWW Garlic Parm Chicken</title>
 </head>
 <body>
-    <h1>Crockpot Buffalo Wild Wings Garlic Parmesan Chicken</h1>
-    <img src="../img/bwwparm.jpg">
-    <h2>Description</h2>
+    <div><h1 class="title">Odin Recipes</h1></div>
+    <ul class="list">
+        <li class="navbar"><a href="../recipes/carnitas.html"><button class="navbar">Carnitas</button></a></li>
+        <li class="navbar"><a href="../recipes/garlicparm.html"><button class="navbar">Crockpot Buffalo Wild Wings Garlic Parmesan Chicken</button></a></li>
+        <li class="navbar"><a href="../recipes/cowboycav.html"><button class="navbar">Cowboy Caviar</button></a></li>
+    </ul>
+    <h1 class="name">Crockpot Buffalo Wild Wings Garlic Parmesan Chicken</h1>
+    <img src="../img/bwwparm.jpg" alt="Buffalo Wild Wings Parmesan Chicken Crockpot dinner plate" class="top-image" width="400px" height="500px">
+    <h2 class="description">Description</h2>
     <p>
         Easy and tasteful family dinner with a kick! 
     </p>
     <h2>Ingredients</h2>
-    <ul>
-        <li>2-3 Chicken breast</li>
-        <li>Buffalo Wild Wings parmesan garlic sauce</li>
-        <li>Milk(Whole)</li>
-        <li>Cream Cheese (Cubed)</li>
-        <li>Cut permesan cheese</li>
-        <li>Pasta</li>
-    </ul>
+    <div class="ingredients">
+        <ul class="ingredients">
+            <li class="ingredients">2-3 Chicken breast</li>
+            <li class="ingredients">Buffalo Wild Wings parmesan garlic sauce</li>
+            <li class="ingredients">Milk(Whole)</li>
+            <li class="ingredients">Cream Cheese (Cubed)</li>
+            <li class="ingredients">Cut permesan cheese</li>
+            <li class="ingredients">Pasta</li>
+        </ul>
+    </div>
     <h2>Directions</h2>
     <ol>
         <li>Spray/Line crockpot.</li>
